Implement document upload and processing features with Django forms and signals

--- a/frontend/base.html
+++ b/frontend/base.html
@@ -1,7 +1,7 @@
 {% load django_vite %}
 
 <!DOCTYPE html>
-<html lang="en" style="background-color: oklch(26% 0.065 152.934);">
+<html lang="en">
 
     <head>
         <meta charset="UTF-8" />
